kubernetes/manifests/development/smoke-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-app
  namespace: development
spec:
  selector:
    app: smoke-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
