kubernetes/manifests/development/smoke-app/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: smoke-app
  namespace: development
spec:
  host: smoke-app
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
